--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -26,7 +26,7 @@
         <button type="submit" name="logout" title="logout">Log out</button>
       </form>
     {% elif ENABLE_LOGIN %}
-      <a href="{% oauth_authorize_url login_next|default:request.path %}" class="fb-login">Login with Facebook</a>
+      <a href="{% oauth_authorize_url request login_next|default:request.path %}" class="fb-login">Login with Facebook</a>
     {% endif %}
   </nav>
   {% endblock %}
